Adjusted styling to match design

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         </div>
 
         <hr>
-        <p>Creation of <span>Jules Wyvern</span></p>
+        <div class="creation">
+          <img src="images/image-avatar.png" alt="" class="avatar">
+          <p>Creation of <span>Jules Wyvern</span></p>
+        </div>
       </div>
       <div class="footer">
         <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
